--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,95 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <aspectj.version>1.9.4</aspectj.version>
   </properties>
 
   <dependencies>
+
+    <!--SELENIUM PAKETİ EKLENİR :  https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.23.1</version>
+    </dependency>
+
+    <!--
+      JUNIT PAKETİ EKLENİR :  https://mvnrepository.com/artifact/junit/junit
+      NOT:<scope alanının içini compile olarak doldur
+     -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>4.13.2</version>
+      <scope>compile</scope>
     </dependency>
+
+
+    <!--
+      ALLURE REPORT PAKETİ EKLENİR :   https://mvnrepository.com/artifact/io.qameta.allure/allure-testng
+      NOT:<scope alanının içini compile olarak doldur
+     -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.29.0</version>
+      <scope>compile</scope>
+    </dependency>
+
+
+    <!--
+      ASPECTJ PAKETİ EKLENİR:   https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
+     -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.4</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!--
+      TESTNG PAKETİ EKLENİR:   https://mvnrepository.com/artifact/org.testng/testng
+     -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.10.2</version>
+      <scope>compile</scope>
+    </dependency>
+
+
+    <!--
+      DRIVER HATASI ALMAMAK İÇİN WEB DRIVER MANAGER PAKETİ EKLENİR:   https://bonigarcia.dev/webdrivermanager/
+    -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.9.1</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
+
+  <!--
+   build ekle not:  üstteki properties kısmına şunu ekle    <aspectj.version>1.9.4</aspectj.version>
+  -->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <argLine>
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine>
+          <threadCount>1</threadCount>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
