--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-allure-results
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -37,3 +36,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+/allure-results
